--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -787,7 +787,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Craig+Westerland">Craig Westerland</a>, <em>Configuration spaces in geometry and topology</em>, 2011, <a href="http://www.ms.unimelb.edu.au/~craigw/config.pdf">pdf</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Craig+Westerland">Craig Westerland</a>, <em>Configuration spaces in geometry and topology</em>, 2011, <a href="https://www.austms.org.au/Publ/Gazette/2011/Nov11/TechPaperWesterland.pdf">pdf</a></p>
 </li>
 
 <li>
@@ -806,7 +806,17 @@ margin-left: 0em;
 <p>On the relation to <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>:</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Greg+Arone">Greg Arone</a>, <em>A generalization of Snaith-type filtration</em> (<a href="https://www.ams.org/journals/tran/1999-351-03/S0002-9947-99-02405-8/S0002-9947-99-02405-8.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p>Carl-Friedrich Boedigheimer, <em>Stable splittings of mapping spaces</em> (<a href="http://www.math.uni-bonn.de/~cfb/PUBLICATIONS/stable-splittings-of-mapping-spaces.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -814,14 +824,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 13:20:26.
+  Last revised on October 28, 2018 at 03:57:28.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
