--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -754,6 +754,10 @@ margin-left: 0em;
 <li><a href='#classifying_space_of_the_symmetric_group'>Classifying space of the symmetric group</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
+</ul>
 </ul>
 </div>
 
@@ -781,6 +785,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <ul>
 <li>
 <p>Edward Fadell, Lee Neuwirth, <em>Configuration spaces</em> Math. Scand. <strong>10</strong> (1962) 111-118, <a href="http://www.ams.org/mathscinet-getitem?mr=141126">MR141126</a>, <a href="http://www.mscand.dk/article.php?id=1623">pdf</a></p>
@@ -803,18 +809,20 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>On the relation to <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>:</p>
+<h3 id="ReferencesInGoodwillieCalculus">In Goodwillie-calculus</h3>
+
+<p>The configuration spaces of a space <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> appear as the <a class="existingWikiWord" href="/nlab/show/Goodwillie+derivatives">Goodwillie derivatives</a> of its <a class="existingWikiWord" href="/nlab/show/mapping+space">mapping space</a>/<a class="existingWikiWord" href="/nlab/show/nonabelian+cohomology">nonabelian cohomology</a>-<a class="existingWikiWord" href="/nlab/show/functor">functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Maps</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Maps(X,-)</annotation></semantics></math>:</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Greg+Arone">Greg Arone</a>, <em>A generalization of Snaith-type filtration</em> (<a href="https://www.ams.org/journals/tran/1999-351-03/S0002-9947-99-02405-8/S0002-9947-99-02405-8.pdf">pdf</a>)</p>
+<li id="Boedigheimer87">
+<p><a class="existingWikiWord" href="/nlab/show/Carl-Friedrich+B%C3%B6digheimer">Carl-Friedrich Bödigheimer</a>, <em>Stable splittings of mapping spaces</em>, Algebraic topology. Springer 1987. 174-187 (<a href="http://www.math.uni-bonn.de/~cfb/PUBLICATIONS/stable-splittings-of-mapping-spaces.pdf">pdf</a>)</p>
 </li>
 
-<li>
-<p>Carl-Friedrich Boedigheimer, <em>Stable splittings of mapping spaces</em> (<a href="http://www.math.uni-bonn.de/~cfb/PUBLICATIONS/stable-splittings-of-mapping-spaces.pdf">pdf</a>)</p>
+<li id="Arone99">
+<p><a class="existingWikiWord" href="/nlab/show/Greg+Arone">Greg Arone</a>, <em>A generalization of Snaith-type filtration</em>, Transactions of the American Mathematical Society 351.3 (1999): 1123-1150. (<a href="https://www.ams.org/journals/tran/1999-351-03/S0002-9947-99-02405-8/S0002-9947-99-02405-8.pdf">pdf</a>)</p>
 </li>
 
-<li>
+<li id="Ching05">
 <p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</p>
 </li>
 </ul>
@@ -824,7 +832,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 03:57:28.
+  Last revised on October 28, 2018 at 04:15:28.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
