--- a/pages/18070.html
+++ b/pages/18070.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -846,6 +846,10 @@ margin-left: 0em;
 <li id="Boedigheimer87">
 <p><a class="existingWikiWord" href="/nlab/show/Carl-Friedrich+B%C3%B6digheimer">Carl-Friedrich Bödigheimer</a>, <em>Stable splittings of mapping spaces</em>, Algebraic topology. Springer 1987. 174-187 (<a href="http://www.math.uni-bonn.de/~cfb/PUBLICATIONS/stable-splittings-of-mapping-spaces.pdf">pdf</a>)</p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ben+Knudsen">Ben Knudsen</a>, <em>Configuration spaces in algebraic topology</em>, (<a href="https://arxiv.org/abs/1803.11165">arXiv:1803.11165</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -895,14 +899,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 09:37:10.
+  Last revised on October 28, 2018 at 10:11:26.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
