--- a/pages/18070.html
+++ b/pages/18070.html
@@ -775,11 +775,71 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>(…)</p>
+<div class="num_defn" id="ConfigurationSpaceOfParticleswithLabels">
+<h6 id="definition_2">Definition</h6>
 
-<p>(<a href="#Boedigheimer87">Bödigheimer 87, 1</a>)</p>
+<p><strong>(configuration space of particles with labels)</strong></p>
 
-<p>(…)</p>
+<p>Let</p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mn>∞</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(X, \infty)</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/pointed+topological+space">pointed</a> <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a> of <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a></p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>A</mi><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(A, 0)</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/pointed+topological+space">pointed</a> <a class="existingWikiWord" href="/nlab/show/CW-complex">CW-complex</a>.</p>
+</li>
+</ol>
+
+<p>Then the <em>configuration space of points in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> with labels in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></em></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>(</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">∐</mo><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></munder><mrow><mo>(</mo><msup><mi>X</mi> <mi>n</mi></msup><mo>∖</mo><msubsup><mstyle mathvariant="bold"><mi>Δ</mi></mstyle> <mi>X</mi> <mi>n</mi></msubsup><mo>)</mo></mrow><mo>×</mo><msup><mi>A</mi> <mi>n</mi></msup><mo>)</mo></mrow><mo stretchy="false">/</mo><mo>∼</mo></mrow><annotation encoding="application/x-tex">
+  Conf(X, A)
+  \;\coloneqq\;
+  \left(
+    \underset{ n \in \mathbb{N} }{\coprod} 
+    \left( 
+      X^n \setminus \mathbf{\Delta}^n_X
+    \right)
+    \times A^n
+  \right)/\sim
+
+</annotation></semantics></math></div>
+<p>is the <a class="existingWikiWord" href="/nlab/show/quotient+space">quotient space</a> of the <a class="existingWikiWord" href="/nlab/show/disjoint+union">disjoint union</a> of the <a class="existingWikiWord" href="/nlab/show/Cartesian+products">Cartesian products</a> of the space of configurations of distinguishable but unlabeled <a class="existingWikiWord" href="/nlab/show/n-tuples">n-tuples</a> of points, hence the <a class="existingWikiWord" href="/nlab/show/complement">complement</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">X^n</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/fat+diagonal">fat diagonal</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mstyle mathvariant="bold"><mi>Δ</mi></mstyle> <mi>X</mi> <mi>n</mi></msubsup></mrow><annotation encoding="application/x-tex">\mathbf{\Delta}_X^n</annotation></semantics></math>, with the products of label spaces, by the following <a class="existingWikiWord" href="/nlab/show/equivalence+relations">equivalence relations</a>:</p>
+
+<ol>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/action">action</a> of the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mo>∼</mo><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mrow><mi>σ</mi><mo stretchy="false">(</mo><mn>1</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mrow><mi>σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mrow><mi>σ</mi><mo stretchy="false">(</mo><mn>1</mn><mo stretchy="false">)</mo></mrow></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mrow><mi>σ</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></msub><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">
+  \big((x_1, \cdots, x_n), (a_1, \cdots, a_n)\big) 
+  \sim 
+  \big((x_{\sigma(1)}, \cdots, x_{\sigma(n)}), (a_{\sigma(1)}, \cdots, a_{\sigma(n)})\big) 
+
+</annotation></semantics></math></div>
+<p>for any <a class="existingWikiWord" href="/nlab/show/permutation">permutation</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi><mo>∈</mo><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\sigma \in S_n</annotation></semantics></math></p>
+</li>
+
+<li>
+<p>vanishing of particles of “zero charge”:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>∼</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">     
+  \big((x_1, \cdots, x_{n-1}, x_n), (a_1, \cdots, a_{n-1}, 0)\big) 
+  \;\sim\;
+  \big((x_1, \cdots, x_{n-1}), (a_1, \cdots, a_{n-1})\big) 
+
+</annotation></semantics></math></div></li>
+
+<li>
+<p>vanishing of particles of “<a class="existingWikiWord" href="/nlab/show/vanishing+at+infinity">at infinity</a>”:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>,</mo><mn>∞</mn><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo>,</mo><msub><mi>a</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>∼</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>a</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>a</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">     
+  \big((x_1, \cdots, x_{n-1}, \infty), (a_1, \cdots, a_{n-1}, a_n)\big) 
+  \;\sim\;
+  \big((x_1, \cdots, x_{n-1}), (a_1, \cdots, a_{n-1})\big) 
+
+</annotation></semantics></math></div></li>
+</ol>
+</div>
+
+<p>(e.g. <a href="#Boedigheimer87">Bödigheimer 87, 1</a>)</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -899,14 +959,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 10:11:26.
+  Last revised on October 28, 2018 at 12:45:13.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
